# pipCamera

./: .gitmodules  ARCHITECTURE.md  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/elegia/pipcamera/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_pipeline.cpp  buffer_manager.cpp  buffer_manager.h  osc_sender.cpp  osc_sender.h  sine_generator.cpp  sine_generator.h
app/src/main/java/com/elegia/pipcamera/: MainActivity.kt
app/src/main/java/com/elegia/pipcamera/audio/: AudioDemoManager.kt  AudioProcessor.kt  MicrophoneProcessor.kt  ProcessingNode.kt
app/src/main/java/com/elegia/pipcamera/camera/: CameraCapabilities.kt  CameraManager.kt  CameraMetering.kt  CaptureController.kt  CaptureRequestIntrospection.kt  FrameProcessor.kt
app/src/main/java/com/elegia/pipcamera/ml/: ExampleProcessors.kt  FeatureProcessingFlow.kt  FeatureProcessor.kt  ProcessorRegistry.kt  WekaImageProcessor.kt
app/src/main/java/com/elegia/pipcamera/pip/: PiPManager.kt
app/src/main/java/com/elegia/pipcamera/pipeline/: MediaPipeline.kt
app/src/main/java/com/elegia/pipcamera/pipeline/examples/: AdvancedAudioPipeline.kt
app/src/main/java/com/elegia/pipcamera/pipeline/nodes/: MediaCodecEncoderNode.kt  MicrophoneInputNode.kt  UdpStreamOutputNode.kt  WekaMLProcessorNode.kt
app/src/main/java/com/elegia/pipcamera/preferences/: OSCPreferences.kt
app/src/main/java/com/elegia/pipcamera/ui/: AGSLCameraOverlay.kt  AudioDemo.kt  CameraControls.kt  CameraScreen.kt  CameraToolbar.kt  MediaPipelineDemo.kt  MeteringInfo.kt  PermissionHandler.kt  SurfaceToolbar.kt
app/src/main/java/com/elegia/pipcamera/ui/pipelineMenus/: AudioTabComponent.kt  ImagesTabComponent.kt  MessagesTabComponent.kt  OSCTabComponent.kt
app/src/main/java/com/elegia/pipcamera/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/elegia/pipcamera/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libmedia_pipeline/: CMakeLists.txt
osc_receiver/: CMakeLists.txt  README.md  audio_output.cpp  audio_output.h  build.sh  main.cpp  osc_receiver.cpp  osc_receiver.h
